# impala-transfer-tool

./: .gitignore  .pre-commit-config.yaml  ENVIRONMENT_VARIABLES.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test_cli.py
.cursor/: coding-standards.md  project.md
docs/: API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  ENVIRONMENT_VARIABLES.md  PROJECT_SETUP.md  README.md  TRANSFER_METHODS.md  TROUBLESHOOTING.md
example_queries/: date_range_query.sql  fsspec_comprehensive_examples.py
example_queries/scripts/: fsspec_config_examples.py
example_queries/sql/: date_filter_query.sql
examples/scripts/: ctas_examples.py
examples/sql/: aggregated_query.sql  ctas_examples.sql
impala_transfer/: __init__.py  chunking.py  cli.py  connection.py  core.py  orchestrator.py  query.py  transfer.py  utils.py
tests/: __init__.py  test_chunking.py  test_cli.py  test_connection.py  test_core.py  test_ctas.py  test_fsspec_filesystem_objects.py  test_fsspec_transfer.py  test_impala_transfer.py  test_init.py  test_integration.py  test_orchestrator.py  test_query.py  test_transfer.py  test_utils.py
