[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impala-transfer"
version = "2.0.0"
description = "A tool for transferring large datasets from database clusters to HDFS/Hive"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Data Transfer Team", email = "team@example.com"}
]
maintainers = [
    {name = "Data Transfer Team", email = "team@example.com"}
]
keywords = ["database", "transfer", "impala", "hdfs", "hive", "sqlalchemy", "pyodbc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.3.0",
    "pyarrow>=5.0.0",
]

[project.optional-dependencies]
impyla = ["impyla>=0.17.0"]
pyodbc = ["pyodbc>=4.0.0"]
sqlalchemy = ["sqlalchemy>=1.4.0"]
postgresql = ["sqlalchemy[postgresql]>=1.4.0"]
mysql = ["sqlalchemy[mysql]>=1.4.0"]
oracle = ["sqlalchemy[oracle]>=1.4.0"]
all = [
    "impyla>=0.17.0",
    "pyodbc>=4.0.0", 
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
    "cx-oracle>=8.0.0",
]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
    "pre-commit>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/impala-transfer-tool"
Documentation = "https://github.com/yourusername/impala-transfer-tool/blob/main/README.md"
Repository = "https://github.com/yourusername/impala-transfer-tool.git"
"Bug Tracker" = "https://github.com/yourusername/impala-transfer-tool/issues"
"Discussions" = "https://github.com/yourusername/impala-transfer-tool/discussions"

[project.scripts]
impala-transfer = "impala_transfer.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["impala_transfer*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
    "test_impala_transfer.py",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["impala_transfer"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "impala.dbapi",
    "pyodbc",
    "sqlalchemy.*",
]
ignore_missing_imports = true 